fix: About timeline cut-off and Project cards fixed width
- About: fix timeline text and category numbers being cut off
- About: increase padding to ensure content visibility
- Project: change grid from responsive to fixed width cards
- Project: 4col=320px, 3col=380px, 2col=480px with center alignment

--- a/docs/.vuepress/styles/index.scss
+++ b/docs/.vuepress/styles/index.scss
@@ -2384,6 +2384,8 @@ main.vp-page:has(.lk-blog-fullbleed),
   max-width: none;
   margin-left: calc(-1 * var(--lk-about-pull));
   margin-right: calc(-1 * var(--lk-about-push));
+  padding-left: max(1rem, env(safe-area-inset-left));
+  padding-right: max(1rem, env(safe-area-inset-right));
   box-sizing: border-box;
 }
 
@@ -2401,6 +2403,8 @@ main.vp-page:has(.lk-about-fullbleed),
   width: 100%;
   max-width: 100%;
   margin-bottom: 1.5rem;
+  padding-left: 0;
+  padding-right: 0;
   box-sizing: border-box;
 
   // 平板：三列变单列
